# python_gogogate2_api

./: .codespell-ignore  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  publish.yml
gogogate2_api/: __init__.py  cli.py  common.py  const.py
scripts/: build.sh  clean.sh  cli.py  common.sh
tests/: common.py  test_cli.py  test_common.py  test_init.py
