[tool.poetry]
name = "gogogate2_api"
version = "2.0.1"
description = "Library for connecting to GogoGate2 and iSmartGate hubs"

license = "MIT"

authors = [
    "Robbie Van Gorkom <robbie.van.gorkom@protonmail.com>"
]

readme = 'README.md'

repository = "https://github.com/vangorra/python_gogogate2_api"
homepage = "https://github.com/vangorra/python_gogogate2_api"

keywords = ['gogogate2', 'ismartgate', 'api']

[tool.poetry.scripts]
gogogate2 = "gogogate2_api.cli:gogogate2_cli"
ismartgate = "gogogate2_api.cli:ismartgate_cli"

[tool.poetry.dependencies]
python = ">=3.6, <4"
dataclasses = { version = "^0.7", python = "^3.6, <3.7" }
defusedxml = ">=0.6.0"
pycryptodomex = ">=3.9.7"
requests = ">=2.23.0"
typing-extensions = ">=3.7.4.2"

[tool.poetry.dev-dependencies]
autoflake = "==1.3.1"
bandit = "==1.6.2"
black = "==19.10b0"
click = "==7.1.2"
codespell = "==1.17.1"
coverage = "==5.0.4"
dicttoxml = "==1.7.4"
flake8 = "==3.7.8"
isort = "==4.3.21"
mypy = "==0.740"
pylint = "==2.5.3"
pytest = "==6.0.1"
pytest-cov = "==2.10.0"
responses = "==0.10.6"
toml = "==0.10.0"  # Needed by isort and others to parse this file.
wheel = "==0.33.6"  # Needed for successful compile of other modules.


[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | build
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
# by default isort don't check module indexes
not_skip =  "__init__.py"
# will group `import obj` and `from obj import` of the same module.
force_sort_within_sections = true
sections = "FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "homeassistant,tests"
forced_separate = "tests"
combine_as_imports = true


[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 97.0

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture no --cov ./gogogate2_api --cov-report html:build/coverage_report --cov-report term --cov-report xml:build/coverage.xml"


[tool.pylint.MASTER]
jobs=4

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
disable=[
    "format",
    "too-many-arguments",
    "too-few-public-methods"
]

[tool.pylint.REPORTS]
reports = false

[tool.pylint.TYPECHECK]
# For attrs
ignored-classes="responses"

[tool.pylint.FORMAT]
expected-line-ending-format="LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions="Exception"
